<resources>
    <string name="app_name">SmsYa</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contactListLablel">Contact Lists</string>
    <string name="txt_sms_welcome_text">Select what you want to do</string>
    <string name="txt_quicksms_title">Send a Quick SMS</string>
    <string name="txt_phonecontacts">Phone contacts</string>
    <string name="txt_contact_s">Contact(s)</string>
    <string name="txt_add_contact">Add contact</string>
    <string name="txt_sender_name">Sender name</string>
    <string name="txt_select_sender_name">Please select a sender name</string>
    <string name="txt_text_message">Text Message</string>
    <string name="txt_schedule_date">Schedule Date</string>
    <string name="txt_send_message">Send message</string>
    <string name="txt_text">Text</string>
    <string name="txt_unicode">Unicode</string>
    <string name="txt_empty"></string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="txt_add_a_contact">Add a Contact</string>
    <string name="txt_sms_templates">SMS Templates</string>
    <string name="txt_edit">Edit</string>
    <string name="txt_delete">Delete</string>
    <string name="txt_sender_name_definition">A unique name or standard mobile number that shows in the “from” field of your text messages on your phone</string>
    <string name="txt_request_a_sender_name">Request a Sender Name</string>
    <string name="txt_request">Request</string>
    <string name="txt_delete_template">Delete Template</string>
    <string name="txt_select_addressbook">Select Addressbook</string>
    <string name="txt_send_campaign">Send Campaign</string>
    <string name="txt_address_books">Addressbooks</string>
    <string name="txt_add_a_new_addressbook">Add a new Addressbook</string>
    <string name="txt_add_addressbook">Add Addressbook</string>
    <string name="txt_welcome">Welcome</string>
    <string name="txt_sms_balance">SMS Balance</string>
    <string name="txt_contacts">Contacts</string>
    <string name="txt_sms">SMS</string>
    <string name="txt_sender_names">Sender Names</string>
    <string name="txt_enter_a_phonenumber_or_select_from_phonebook">Enter a phonenumber or select from phonebook</string>
    <string name="txt_phonenumber">Phonenumber</string>
    <string name="txt_quick_sms">Quick SMS</string>
    <string name="txt_campaign">Campaign</string>
    <string name="txt_addressbook_title">Addressbook title</string>
    <string name="txt_description_of_addressbook">Description of addressbook</string>
    <string name="txt_first_name">First name</string>
    <string name="txt_last_name">Last name</string>
    <string name="txt_city">City</string>
    <string name="txt_email">Email</string>
    <string name="txt_send_message_to_people_in_a_contact_list">Send message to people in a contact list</string>
    <string name="txt_edit_addressbook">Edit AddressBook</string>
    <string name="txt_edit_contact">Edit Contact</string>
    <string name="txt_name">Name</string>
    <string name="txt_save_contact">Save Contact</string>
    <string name="txt_template_title">Template Title</string>
    <string name="txt_template_messaage">Template Messaage</string>
    <string name="txt_save_template">Save Template</string>
    <string name="txt_create_addressbook">Create Addressbook</string>
    <string name="txt_update_contact">Update Contact</string>
    <string name="txt_delete_contact">Delete contact</string>
    <string name="txt_are_you_sure_delete">Are you sure you want to delete</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_delete_addressbook">Delete Addressbook</string>
    <string name="txt_the_message_is">The message is</string>
</resources>