<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RequestSenderNameFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvw_request_sn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/AppTitles"
            android:layout_marginTop="32dp"
            android:text="@string/txt_request_a_sender_name" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edititext_sender_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_sender_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvw_request_sn"
            android:layout_marginTop="32dp"
           />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_request_sn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/txt_request"
            app:layout_constraintTop_toBottomOf="@+id/edititext_sender_name"
            android:layout_marginTop="32dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>





</androidx.coordinatorlayout.widget.CoordinatorLayout>