<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SMSFragment">

    <!-- TODO: Update blank fragment layout -->


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
    <TextView
        android:id="@+id/textView4"
        style="@style/AppTitles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="32dp"
        android:text="@string/txt_sms_welcome_text"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_quick_sms"
        style="@style/DefaultButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="8dp"
        android:drawableTop="@drawable/ic_baseline_sms_32"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:text="@string/txt_quick_sms"
        app:layout_constraintEnd_toStartOf="@+id/btn_sms_campaign"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btn_sms_campaign"
        style="@style/DefaultButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="16dp"
        android:drawableTop="@drawable/ic_baseline_campaign_24"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:text="@string/txt_campaign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_quick_sms"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />



    <Button
        android:id="@+id/btn_sms_templates"
        style="@style/DefaultButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:drawableTop="@drawable/ic_baseline_drafts_24"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:text="@string/txt_sms_templates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/btn_quick_sms" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>